--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 
 <body class="skin-blue sidebar-mini">
 
-    <div class="wrapper">
+    <div class="wrapper" ng-app="livraria" ng-cloak>
         <header class="main-header">
             <a href="#" class="logo">
                 <span class="logo-mini"><b>LÉO</b></span>
@@ -33,7 +33,7 @@
                 <ul class="sidebar-menu">
                     <li class="header">MENU</li>
                     <li>
-                        <a href="#">
+                        <a ui-sref="products">
                             <i class="fa fa-gift"></i>
                             <span>Produtos</span>
                         </a>
@@ -43,17 +43,7 @@
         </aside>
 
         <div class="content-wrapper">
-            <section class="content-header">
-                <h1>
-                    Blank page
-                    <small>it all starts here</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                    <li><a href="#">Examples</a></li>
-                    <li class="active">Blank page</li>
-                </ol>
-            </section>
+            <div ui-view></div>
         </div>
 
         <footer class="main-footer">
@@ -67,6 +57,8 @@
 <!-- Bower Dependencies -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/angular/angular.js"></script>
+<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/bower_components/admin-lte/dist/js/app.min.js"></script>
 <script src="/bower_components/slimScroll/jquery.slimscroll.min.js"></script>
@@ -74,5 +66,8 @@
 
 <!-- Custom JS -->
 <script src="application.js"></script>
+
+<!-- Routes -->
+<script src="scripts/routes/product.js"></script>
 </body>
 </html>
