--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Léo Artigos Religiosos</title>
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
-    <link rel="stylesheet" href="/bower_components/admin-lte/dist/css/AdminLTE.min.css" />
-    <link rel="stylesheet" href="/bower_components/admin-lte/dist/css/skins/_all-skins.min.css" />
-    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="/styles/application.css"/>
-</head>
-
 <body class="skin-blue sidebar-mini">
 
-    <div class="wrapper" ng-app="livraria" ng-cloak>
-        <header class="main-header">
-            <a href="#" class="logo">
-                <span class="logo-mini"><b>LÉO</b></span>
-                <span class="logo-lg"><b>LÉO</b>Livraria</span>
+<div class="wrapper" ng-app="livraria" ng-cloak>
+    <header class="main-header">
+        <a href="#" class="logo">
+            <span class="logo-mini"><b>LÉO</b></span>
+            <span class="logo-lg"><b>LÉO</b>Livraria</span>
+        </a>
+
+        <nav class="navbar navbar-static-top" role="navigation">
+            <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </a>
+        </nav>
+    </header>
 
-            <nav class="navbar navbar-static-top" role="navigation">
-                <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </a>
-            </nav>
-        </header>
+    <aside class="main-sidebar">
+        <section class="sidebar">
+            <ul class="sidebar-menu">
+                <li class="header">MENU</li>
+                <li>
+                    <a ui-sref="products">
+                        <i class="fa fa-gift"></i>
+                        <span>Produtos</span>
+                    </a>
+                </li>
+                <li class="header">CONFIGURAÇÕES</li>
+                <li>
+                    <a ui-sref="product-types">
+                        <i class="fa fa-cubes"></i>
+                        <span>Tipos de Produto</span>
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </aside>
 
-        <aside class="main-sidebar">
-            <section class="sidebar">
-                <ul class="sidebar-menu">
-                    <li class="header">MENU</li>
-                    <li>
-                        <a ui-sref="products">
-                            <i class="fa fa-gift"></i>
-                            <span>Produtos</span>
-                        </a>
-                    </li>
-                </ul>
-            </section>
-        </aside>
-
-        <div class="content-wrapper">
-            <div ui-view></div>
-        </div>
-
-        <footer class="main-footer">
-            <div class="pull-right hidden-xs">
-                <b>Version</b> 2.0
-            </div>
-            <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights reserved.
-        </footer>
+    <div class="content-wrapper">
+        <div ui-view></div>
     </div>
+
+    <footer class="main-footer">
+        <div class="pull-right hidden-xs">
+            <b>Version</b> 1.0
+        </div>
+        <strong>Copyright &copy; 2014-2015 <a href="https://www.facebook.com/jeans.paulodasilva">Jeans</a>.</strong> Todos os direitos reservados.
+    </footer>
+</div>
 
 <!-- Bower Dependencies -->
 <script src="/bower_components/jquery/dist/jquery.js"></script>
@@ -67,7 +65,25 @@
 <!-- Custom JS -->
 <script src="application.js"></script>
 
+<!-- Services -->
+<script src="scripts/services/product-type.js"></script>
 <!-- Routes -->
 <script src="scripts/routes/product.js"></script>
+<script src="scripts/routes/product-type.js"></script>
+
+<!-- Controllers -->
+<script src="scripts/controllers/product-type.js"></script>
+
+
+
 </body>
+
+<head>
+    <title>Léo Artigos Religiosos</title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/bower_components/admin-lte/dist/css/AdminLTE.min.css" />
+    <link rel="stylesheet" href="/bower_components/admin-lte/dist/css/skins/_all-skins.min.css" />
+    <link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="/styles/application.css"/>
+</head>
 </html>
