--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Léo Artigos Religiosos</title>
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="/bower_components/angular-dialog-service/dist/dialogs.min.css"/>
+
+    <meta charset="UTF-8"/>
+</head>
 <body class="skin-blue sidebar-mini">
 
 <div class="wrapper" ng-app="livraria" ng-cloak>
@@ -58,9 +65,15 @@
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+<script src="/bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+<script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="/bower_components/admin-lte/dist/js/app.min.js"></script>
 <script src="/bower_components/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="/bower_components/fastclick/lib/fastclick.js"></script>
+<script src="/bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+<script src="/bower_components/angular-translate/angular-translate.min.js"></script>
+<script src="/bower_components/angular-dialog-service/dist/dialogs-default-translations.min.js"></script>
+<script src="/bower_components/angular-dialog-service/dist/dialogs.min.js"></script>
 
 <!-- Custom JS -->
 <script src="application.js"></script>
